# yo-yo-math

./: .gitignore  Makefile  _quarto.yml  acknowledgment.html  acknowledgment.qmd  before-body.html  before-body.tex  cover.tex  credits.html  credits.qmd  custom.css  index.html  index.qmd  pyproject.toml  search.json  supporting.html  supporting.qmd
_extensions/custom-boxes/: color-text.lua  color-title.lua  custom-boxes.lua  scale-text.lua  twemoji.lua
_extensions/pandoc-ext/diagram/: diagram.lua
counting/: addition_and_substraction.qmd  additional_addition.qmd  comparing.qmd  counting_objects.qmd  decimal_numerals.qmd  index.html  index.qmd  naming_things.qmd  pyproject.toml  soroban.qmd
counting_faster/: arithmetic_series.qmd  counting_faster.qmd  division.qmd  exponentiation.qmd  index.html  index.qmd  multiplication_tables.qmd  shifting.qmd
counting_recap/: counting_recap.html  counting_recap.qmd
extra/: beyond_99.qmd
multiplication_and_geometry/: areas.qmd  index.html  index.qmd  integrals.qmd  triangles.qmd
number_line/: cartesian_plane.qmd  clock_arithmetic.qmd  integers.qmd  number_line.qmd
pizza_math/: index.html  index.qmd  rhythms.qmd  rythms.qmd
positional_number_system/: base10.qmd  clock_arithmetic.qmd  comparing_quantities.qmd  hotel.qmd  index.html  index.qmd  other_bases.qmd  positional.qmd
scripts/: generate_polygons.py
site_libs/bootstrap/: bootstrap-4ac6fc6717aebbd5f1a057106f477a91.min.css  bootstrap-8950a910e245e0d9633450c5b26c4e09.min.css
