[project]
name = "yo-yo-math"
version = "0.1.0"
description = "Curriculum, a book for playing mathematics"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "pyyaml",
    "jupyter",
    "yoyo_plots",
    "drawsvg>=2.4.1",
    "soroban-abacus>=0.1.0",
    "cairosvg>=2.8.2",
    "kaleido>=1.2.0",
    "ghp-import>=2.1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Children",
    "Topic :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "yo-yo-math",
    "kids",
    "mathematics",
    "children mathematics",
]
authors = [{ name = "Diego Sandoval", email = "dsandovalv@gmail.com" }]
maintainers = [{ name = "Diego Sandoval", email = "dsandovalv@gmail.com" }]

[tool.uv]
package = false

[tool.uv.sources]
yoyo-plots = { git = "https://github.com/twaclaw/yoyo-plots/" }

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
