[project]
name = "number-line-utils"
version = "0.1.0"
description = "Utilities for generating number line and quantity plots"
authors = [{ name = "User", email = "user@example.com" }]
dependencies = [
    "plotly>=5.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.0.0",
    "kaleido>=0.2.1",
    "figural>=0.1.0",
    "nbformat>=5.10.4",
]
requires-python = ">=3.9"

[project.scripts]
number_line = "utils.number_line:main"
numbers = "utils.numbers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
